| Summary: | ASTERISK-25584: [patch] format-attribute module: VP8 missing | ||
| Reporter: | Alexander Traud (traud) | Labels: | |
| Date Opened: | 2015-11-21 06:07:09.000-0600 | Date Closed: | 2015-12-04 11:36:52.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Formats/General Resources/General |
| Versions: | 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) res_format_attr_vp8.c | |
| Description: | Since August 2012, the video-codec VP8 has the two (optional) parameters {{max-fr}} and {{max-fs}} which are described in its [MIME media-type description|http://tools.ietf.org/html/draft-ietf-payload-vp8]. Since May 2013, Asterisk supports VP8 as a pass-through format. However, Asterisk is not able to forward any parameters via SDP/fmtp because the format-attribute module for VP8 is missing. | ||
| Comments: | |||